[package]
name = "stable-channels"
version = "0.1.0"
edition = "2021"

[features]
exchange = []
user = []
lsp = []

[dependencies]
ldk-node = { git = "https://github.com/lightningdevkit/ldk-node.git", rev = "22cb1df03ff071c5a7f6b01ce4654874e2996c2a" }
lightning = { version = "0.0.125", features = ["std"] }
ureq = { version = "2.10.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
retry = "1.3"
futures = "0.3"
async-trait = "0.1"
hex = "0.4.3"

# GUI dependencies
eframe = { version = "0.30.0" }
egui = { version = "0.30.0", default-features = false, features = ["color-hex"] }
egui_extras = { version = "0.30.0", features = ["default"] }
qrcode = { version = "0.14" }
image = { version = "0.24" }